--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
 
             
                 <div class="container">
+                    <div class="title"><h1>Products</h1></div>
                     <img src="./img/sec-2-back.png" class="bg1" alt="">
                     <img src="./img/c-1.jpeg" class="cont img1"  alt="">
                     <img src="./img/c-2.jpeg" class="cont img2" alt="">
