--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     </a>
                     <div class="txt-box">
                         <a href="#none" class="top">
-                            <div class="logo"><img src="./img/logo.png" alt=""></div>
+                            <div class="logo"><h3>Plastic Ark</h3><span></span></div>
                             <svg class="with" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M12.4498 37.9498L10.0498 35.5498L21.5998 23.9998L10.0498 12.4498L12.4498 10.0498L23.9998 21.5998L35.5498 10.0498L37.9498 12.4498L26.3998 23.9998L37.9498 35.5498L35.5498 37.9498L23.9998 26.3998L12.4498 37.9498Z" fill="black"/>
                                 </svg>
@@ -354,7 +354,7 @@
                     </a>
                     <div class="txt-box">
                         <a href="#none" class="top">
-                            <div class="logo"><img src="./img/logo.png" alt=""></div>
+                            <div class="logo"><h3>Plastic Ark</h3><span></span></div>
                             <svg class="with" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M12.4498 37.9498L10.0498 35.5498L21.5998 23.9998L10.0498 12.4498L12.4498 10.0498L23.9998 21.5998L35.5498 10.0498L37.9498 12.4498L26.3998 23.9998L37.9498 35.5498L35.5498 37.9498L23.9998 26.3998L12.4498 37.9498Z" fill="black"/>
                                 </svg>
